support datasource management beta api
