# lib/autorest/models/index.js
@@ -34,3 +34,6 @@ exports.GatewayPublicKey = require('./gatewayPublicKey');
 exports.WorkspaceId = require('./workspaceId');
 exports.ODataResponseString = require('./oDataResponseString');
 exports.CreateGatewayRequest = require('./createGatewayRequest');
+exports.PublishDatasourceToGatewayRequest = require('./publishDatasourceToGatewayRequest');
+exports.CredentialDetails = require('./credentialDetails');
+exports.BindToGatewayRequest = require('./bindToGatewayRequest');
